--- a/mikiah.html
+++ b/mikiah.html
@@ -15,7 +15,7 @@
 input a score:
 <input type="text" name="score" id="score">
 
-<button>push me!</button>
+<button> Enter </button>
 
 <div id="grade"></div>
 
