--- a/mikiah.html
+++ b/mikiah.html
@@ -1,62 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>What's Your Grade?</title>
 </head>
+
 <body>
-    
-<h1>What's Your Grade?</h1>
-<h3>Find out what your grade will be after a new test or assignment is added to the gradebook</h3>
 
+    <h1>What's Your Grade?</h1>
+    <h3>Find out what your grade will be after a new test or assignment is added to the gradebook</h3>
 
-<div>
-    <label for="outOff">What's the grade of the test/assignment out of?</label>
-    <input type="number" name="outOff" id="outOff" />
-</div>
+    <div>
+        <label for="pointss">How many points are earned on the test/assignment?</label>
+        <input type="number" name="pointss" id="pointss" />
+    </div>
 
-<div>
-    <label for="gradeBeforee">What is your current percentage in the class?</label>
-    <input type="number" name="gradeBeforee" id="gradeBeforee" />
-</div>
+    <div>
+        <label for="outOff">How many points is the test/assignment out of?</label>
+        <input type="number" name="outOff" id="outOff" />
+    </div>
 
-<div>
-    <label for="sectionPointss">How many points are in the section that has the test/assignment?</label>
-    <input type="number" name="sectionPointss" id="sectionPointss" />
-</div>
+    <div>
+        <label for="gradeBeforee">What is your current percentage in the class?</label>
+        <input type="number" name="gradeBeforee" id="gradeBeforee" />
+    </div>
 
-<div>
-    <label for="sectionPointsOutOff">How many points is the section that has the test/assignment out of?</label>
-    <input type="number" name="sectionPointsOutOff" id="sectionPointsOutOff" />
-</div>
+    <div>
+        <label for="sectionPointss">How many points are in the section that has the test/assignment?</label>
+        <input type="number" name="sectionPointss" id="sectionPointss" />
+    </div>
 
-<div id="enduphere"></div>
+    <div>
+        <label for="sectionPointsOutOff">How many points is the section that has the test/assignment out of?</label>
+        <input type="number" name="sectionPointsOutOff" id="sectionPointsOutOff" />
+    </div>
 
-<button onclick="sections();"> Add a section </button>
-<br>
-<br>
-<button onclick="test();"> Enter </button>
-<br>
-<br>
+    <div id="enduphere"></div>
 
-<div>
-    <input type="range" id="volume" name="volume"
-           min="0" max="score*2" value="" step="0.5">
-    <label for="score">Score on test/assignment</label>
-  </div>
+    <button onclick="sections();"> Add a section </button>
+    <br>
+    <br>
+    <button onclick="test();"> Enter </button>
+    <br>
+    <br>
 
-  <br>
-  <div id="enduphere2"></div>
+    <br>
+    <div id="enduphere2"></div>
 
-<script>
-let thing = 1;
+    <script>
+        let thing = 1;
 
-function sections() {
+        function sections() {
 
-    document.getElementById("enduphere").innerHTML +=
-    `
+            document.getElementById("enduphere").innerHTML +=
+                `
     How many points do you have in this section?
     <input type="number" name="scores" id="scores${thing}">
 
@@ -69,49 +69,53 @@ function sections() {
     <br>
     
     `;
-    thing++
+            thing++
 
-}
-
-function test() {
-
-    let gradeBefore = document.getElementById("gradeBeforee").valueAsNumber;
-    let gradeBeforeLetter = letters(gradeBefore/100);
-    let outOf = document.getElementById("outOff").valueAsNumber;
-
-    let assignmentPercent = points/outOf;
-
-    let secPoints = document.getElementById("sectionPointss").valueAsNumber;
-    let sectionPointsOutOf = document.getElementById("sectionPointsOutOff").valueAsNumber;
-    let secNum = document.getElementById("secNumm").valueAsNumber;
-
-    let scores = [];
-    let percent = [];
-    for(let x=1; x < thing; x++){
-            scores [x] = document.getElementById(`scores${x}`).valueAsNumber;
-            scores[x] /= document.getElementById(`scores2${x}`).valueAsNumber;
-            percent[x] = document.getElementById(`percent${x}`).valueAsNumber;
         }
 
-    let percentO = 0;
-    for(let x = 0; x< percent.length; x++){
-            percentO += percent[x];
-        }
-    percentO = 100 - percentO;
+        function test() {
 
-    let finall = (((sectionPoints+points)/(sectionPointsOutOf + outOf))*percentO);
-        for(let b = 0; b<scores.length; b++){
-            finall+=((scores[b])*percent[b]);
-        }
+            let points = document.getElementById("pointss").valueAsNumber;
+            let gradeBefore = document.getElementById("gradeBeforee").valueAsNumber;
 
-    let finalLetter= letters(finall/100);
-    finall = finall*100; 
-    finall = Math.round(finall);
-    finall = finall/100;
+            let gradeBeforeLetter = letters(gradeBefore / 100);
+
+            let outOf = document.getElementById("outOff").valueAsNumber;
+
+            let assignmentPercent = points / outOf;
+            let assignmentGrade = letters(assignmentPercent);
+
+            let sectionPoints = document.getElementById("sectionPointss").valueAsNumber;
+            let sectionPointsOutOf = document.getElementById("sectionPointsOutOff").valueAsNumber;
+            let secNum = document.getElementById("secNumm").valueAsNumber;
+
+            let scores = [];
+            let percent = [];
+            for (let x = 1; x < thing; x++) {
+                scores[x] = document.getElementById(`scores${x}`).valueAsNumber;
+                scores[x] /= document.getElementById(`scores2${x}`).valueAsNumber;
+                percent[x] = document.getElementById(`percent${x}`).valueAsNumber;
+            }
+
+            let percentO = 0;
+            for (let z = 0; z < percent.length; z++) {
+                percentO += percent[z];
+            }
+            percentO = 100 - percentO;
+
+            let finall = (((sectionPoints + points) / (sectionPointsOutOf + outOf)) * percentO);
+            for (let b = 0; b < scores.length; b++) {
+                finall += ((scores[b]) * percent[b]);
+            }
+
+            let finalLetter = letters(finall / 100);
+            finall = finall * 100;
+            finall = Math.round(finall);
+            finall = finall / 100;
 
 
-document.getElementById("enduphere2").innerHTML +=
-`
+            document.getElementById("enduphere2").innerHTML +=
+                `
 Letter grade of the test/assignment: ${assignmentGrade}
 <br>
 Overall letter grade in the class before: ${gradeBeforeLetter}
@@ -125,57 +129,52 @@ Overall grade in the class after as a percentage: ${finall}
 
 `;
 
-}
+        }
 
-function letter(a) {
-    let x;
-    if(a>=0.93){
-            x = "A";
+        function letter(a) {
+            let x;
+            if (a >= 0.93) {
+                x = "A";
+            }
+            else if (a >= 0.90) {
+                x = "A-";
+            }
+            else if (a >= 0.87) {
+                x = "B+";
+            }
+            else if (a >= 0.83) {
+                x = "B";
+            }
+            else if (a >= 0.80) {
+                x = "B-";
+            }
+            else if (a >= 0.77) {
+                x = "C+";
+            }
+            else if (a >= 0.73) {
+                x = "C";
+            }
+            else if (a >= 0.70) {
+                x = "C-";
+            }
+            else if (a >= 0.67) {
+                x = "D+";
+            }
+            else if (a >= 0.60) {
+                x = "D";
+            }
+            else {
+                x = "F";
+            }
+            return x;
         }
-        else if(a>=0.90){
-            x = "A-";
-        }
-        else if(a>=0.87){
-            x = "B+";
-        }
-        else if(a>=0.83){
-            x = "B";
-        }
-        else if(a>=0.80){
-            x = "B-";
-        }
-        else if(a>=0.77){
-            x = "C+";
-        }
-        else if(a>=0.73){
-            x = "C";
-        }
-        else if(a>=0.70){
-            x = "C-";
-        }
-        else if(a>=0.67){
-            x = "D+";
-        }
-        else if(a>=0.60){
-            x = "D";
-        }
-        else{
-            x = "F";
-        }
-        return x;
-}
 
-
-document.getElementById("form").attachEvent('onsubmit', function(evt){
-        evt.preventDefault();
-        window.history.back();
-        let value = document.getElementById("score").textContent;
-        let grade = value*100;
-
-        document.getElementById("grade").innerText = "my grade is: "+grade;        
-    });
-
-</script>
+        document.getElementById("form").attachEvent('onsubmit', function (evt) {
+            evt.preventDefault();
+            window.history.back();
+        });
+    </script>
 
 </body>
+
 </html>
