--- a/project/index.html
+++ b/project/index.html
@@ -10,7 +10,8 @@
 
 <body>
 
-    <h1>What's Your Grade?</h1>
+    <h1>What's Your Grade?<h1>
+    <h3>Skyward</h3>
     <h3>Find out what your grade will be after a new test or assignment is added to the gradebook</h3>
 
     <div>
