--- a/project/index.html
+++ b/project/index.html
@@ -12,6 +12,7 @@
 
     <h1>What's Your Grade?<h1>
     <h3>Skyward</h3>
+    <h3><a href="schoology.html">Schoology</a></h3>
     <h3>Find out what your grade will be after a new test or assignment is added to the gradebook</h3>
 
     <div>
