--- a/project/schoology.html
+++ b/project/schoology.html
@@ -11,6 +11,8 @@
 <body>
 
     <h1>What's Your Grade?</h1>
+    <h3>Schoology</h3>
+    <h3><a href="index.html">Skyward</a></h3>
     <h3>Find out what your grade will be after a new test or assignment is added to the gradebook</h3>
 
     <div>
